# gc-nace-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: nace_table.csv
gc_nace_classifier/: classify.py  classify_nace.py  inference_materials.py  main.py  material.py  models.py  preprocess.py  utils.py
gc_nace_classifier/rag/: __init__.py  llm.py  vector_store.py
