[tool.poetry]
name = "gc-nace-classifier"
version = "0.1.0"
description = ""
authors = ["cesarliz <cesarliz10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
fastapi = "^0.115.6"
langchain = "^0.3.14"

[tool.isort]
profile = "black"
known_third_party = ["pydantic", "pandas", "click"]  # Include third-party libraries
remove_redundant_aliases = true

[tool.mypy]
plugins = ["pydantic.mypy"]
namespace_packages = true
install_types = true
non_interactive = true
ignore_missing_imports = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
