[tool.poetry]
name = "gc-nace-classifier"
version = "0.1.0"
description = ""
authors = ["cesarliz <cesarliz10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
fastapi = "^0.115.6"
langchain = "^0.3.14"
pandas = "^2.2.3"
python-multipart = "^0.0.20"
faiss-cpu = "^1.9.0.post1"
langchain-community = "^0.3.15"
sentence-transformers = "^3.3.1"
langchain-huggingface = "^0.1.2"
mlx-lm = "^0.21.1"
huggingface-hub = "^0.27.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"
uvicorn = "^0.34.0"

[tool.isort]
profile = "black"
known_third_party = ["pydantic", "pandas", "click"]  # Include third-party libraries
remove_redundant_aliases = true

[tool.mypy]
plugins = ["pydantic.mypy"]
namespace_packages = true
install_types = true
non_interactive = true
ignore_missing_imports = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
